--- a/src/App.css
+++ b/src/App.css
@@ -1,34 +1,64 @@
+* {
+  background: gray;
+  font-family: Arial, Helvetica, sans-serif;
+  flex-wrap: wrap;
+
+}
 .App {
   text-align: center;
+  flex-wrap: nowrap;
+
+}
+.logo {
+  width: 200px;
+}
+.reservation-form {
+  max-width: 400px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.reservation-form input,
+.reservation-form button {
+  width: 100%;
+  margin-bottom: 10px;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
 }
+
+.reservation-form input:focus {
+  outline: none;
+  border-color: #007bff;
+}
+
+.reservation-form button {
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  cursor: pointer;
+}
+
+.reservation-form button:hover {
+  background-color: #0056b3;
+}
+
+.error {
+  color: red;
+}
+
+
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
+  .logo {
     animation: App-logo-spin infinite 20s linear;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
+@keyframes logo {
   from {
     transform: rotate(0deg);
   }
